--- a/ProstheticDesignerNRXQtApp/ProstheticDesigner.vcxproj
+++ b/ProstheticDesignerNRXQtApp/ProstheticDesigner.vcxproj
@@ -119,6 +119,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <QtUic Include="MainForm.ui" />
     <QtUic Include="MechanismForm.ui" />
     <QtUic Include="PlateForm.ui" />
     <QtUic Include="RingForm.ui" />
@@ -127,10 +128,14 @@
     <QtMoc Include="RingForm.h" />
     <QtMoc Include="PlateForm.h" />
     <QtMoc Include="MechanismForm.h" />
+    <QtMoc Include="MainForm.h" />
+    <QtMoc Include="CustomQGroupBox.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CustomQGroupBox.cpp" />
+    <ClCompile Include="MainForm.cpp" />
     <ClCompile Include="MechanismForm.cpp" />
     <ClCompile Include="PlateForm.cpp" />
     <ClCompile Include="ProstheticDesignerNrxAppQt.cpp" />
